add_library(je STATIC
        Batch.cpp
        Batch.h
        Context.cpp
        Context.h
        Human.h
        Human.cpp
        Keyboard.cpp
        Keyboard.h
        Logger.h
        QuadHelpers.h
        Shaders.cpp
        Shaders.h
        Sound.cpp
        Sound.h
        Textures.cpp
        Textures.h
        Time.h
        Transforms.h
        Types.h
        WavDecoder.h
        WavDecoder.cpp
        WavLoader.cpp
        WavLoader.h
        VorbisLoader.cpp
        VorbisLoader.h
        SoundLoader.cpp
        SoundLoader.h
        Shell.h
        Platform.h
        AsyncLoader.h
        AsyncPersistence.cpp
        AsyncPersistence.h
        )
